[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/tests/test_menu.gd" id="1"]

[node name="TestMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -210.0
offset_right = 260.0
offset_bottom = 210.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Test Menu"
horizontal_alignment = 1

[node name="Main" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Run Full Game (Main)"

[node name="Hub" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Test Hub Scene"

[node name="Deck" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Test Deck Builder Scene"

[node name="Run" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Test Run Scene"

[node name="Combat" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Test Combat Scene"

[node name="CardSandbox" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Test Card Drag Sandbox"

[connection signal="pressed" from="Panel/VBox/Main" to="." method="_on_main_pressed"]
[connection signal="pressed" from="Panel/VBox/Hub" to="." method="_on_hub_pressed"]
[connection signal="pressed" from="Panel/VBox/Deck" to="." method="_on_deck_pressed"]
[connection signal="pressed" from="Panel/VBox/Run" to="." method="_on_run_pressed"]
[connection signal="pressed" from="Panel/VBox/Combat" to="." method="_on_combat_pressed"]
[connection signal="pressed" from="Panel/VBox/CardSandbox" to="." method="_on_card_sandbox_pressed"]
